--- a/About-Us.html
+++ b/About-Us.html
@@ -191,14 +191,12 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+            </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -399,8 +397,7 @@
 
                                                 Are you a Mastercard holder? We have something just for you! Enjoy
                                                 complimentary airport rides from now until December 31, 2023 If you are
-                                                a Mastercard World holder, will get 2 Free airport rides per year Just
-                                                use promo...
+                                                a Mastercard World holder.
                                             </p>
                                         </div>
                                     </div>
