--- a/Blog.html
+++ b/Blog.html
@@ -125,9 +125,11 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> 
+                    <a href="your-comment.html">+post</a>
+                </button>
+            </li>
 
             <li class="nav-item dropdown width-Click">
                 <button onclick="myFunction()">
