--- a/your-comment.html
+++ b/your-comment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -7,91 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=REM:wght@100&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css.map">
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <title>Car-Profile</title>
-
+    <link rel="stylesheet" href="css/Arabic.css">
+    <title>Comment</title>
     <style>
-        body{  overflow: visible;}
-        .sub-head{
-            width: 99%;
-            margin-left: 0.2%;
+        .btn-outline-primary{
+            transition: 0.5s;
         }
-
-        .width-99 {
-            width: 99%;
-            margin-left: 0.2%;
-            height: 200px;
-        }
-
-        .amovement {
-            top: 0;
-            width: 99%;
-            display: flex;
-            justify-content: space-around;
-            height: 100%;
-            align-items: center;
-        }
-
-        .this-width-n {
-            width: 100%;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .d-flex {
-            display: flex !important;
-            justify-content: space-around;
-        }
-
-        a.text-white {
-            background-color: rgb(196, 149, 240);
-            width: 40%;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: 1.5s;
-            margin: 2% 0;
-        }
-
-        @media screen and (max-width:1215px) and (min-width:980px) {
-            a.text-white {
-                width: 60%;
-                height: 30px;
-            }
-        }
-
-        @media screen and (max-width: 980px) and (min-width: 730px) {
-            a.text-white {
-                width: 60%;
-                height: 30px;
-            }
-        }
-
-        @media screen and (max-width: 730px) and (min-width: 530px) {
-            a.text-white {
-                width: 55%;
-                height: 35px;
-            }
-        }
-
-        @media screen and (max-width: 530px) and (min-width: 280px) {
-            a.text-white {
-                width: 60%;
-                height: 35px;
-            }
+        .btn-outline-primary:hover {
+            background-color: #0db1fd !important;
+            border-color: #07439d !important;
+            color: yellow !important;
         }
     </style>
-
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
+
     <div class="container-fluid" id="container-fluid">
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
@@ -126,9 +64,7 @@
             </div>
 
             <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit"> 
-                    <a href="your-comment.html">+post</a>
-                </button>
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
             </li>
 
             <li class="nav-item dropdown width-Click">
@@ -146,7 +82,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -249,7 +185,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
@@ -261,124 +197,65 @@
         </div>
     </nav>
 
-    <div class="sub-head blackish">
-        <div class="bg-image position-relative">
-            <img src="img/subhead-bg.jpg" class="img-fluid width-99">
+    <section style="background-color: #4f4ed7; border: 7px solid grey; direction: ltr;">
 
-            <div class="conteainer amovement position-absolute">
-                <div class="row this-width-n">
+        <div class="containers ps-0 my-2 py-2">
 
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-flex d-w-imp-s">
-                        <h4 class="text-white">Maria Grey</h4>
-                        <p class="text-white">( Cambridge )</p>
-                    </div>
+            <div class="row d-flex justify-content-center">
 
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-w-imp-l">
-                        <a href="#" title="" class=" text-white theme-btnn"><i class="fa fa-share-alt"></i>share
-                            profile</a>
-                    </div>
+                <div class="col-md-12  col-lg-10  col-xl-9">
 
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-w-imp-ls">
-                        <a href="#" class="text-white d-inherit" title="">how does this work</a>
-                        <a href="#" class="text-white d-inherit" title="">submit your car</a>
-                        <i class="fa fa-phone  text-white"></i>
-                        <span class="text-white">call (012) 345 - 6789</span>
-                    </div>
+                    <div class="card d-block">
 
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- subhead -->
+                        <div class="card-body" style="background-color: #5c81ff;">
 
-    <section>
-        <div class="space">
-            <div class="conteainer">
-                <div class="roww">
+                            <div class="d-flex flex-start align-items-center">
 
-                    <div class="profile">
-                        <div class="row">
-                            <div class="col-lg-3 col-sm-4">
-                                <div class="profile-dp">
-                                    <div class="col-md12">
-                                        <img src="img/rider-2.jpg" alt="">
-                                        <div class="profile-info">
-                                            <span class="profile-name">Selena G.</span>
-                                            <ul class="stars-rating">
-                                                <li><i class="fa fa-star checked"></i></li>
-                                                <li><i class="fa fa-star checked"></i></li>
-                                                <li><i class="fa fa-star checked"></i></li>
-                                                <li><i class="fa fa-star checked"></i></li>
-                                                <li><i class="fa fa-star checked"></i></li>
-                                            </ul>
-                                            <ins>5 Reviews</ins>
-                                        </div>
-                                    </div>
-                                    <ul class="verification d1-block">
-                                        <li><i class="flaticon-world"></i>Online on 4 Oct, 2017 at 08:36</li>
-                                        <li><i class="flaticon-tick"></i>Account connected on Facebook</li>
-                                        <li><i class="flaticon-tick"></i>Phone number verified</li>
-                                    </ul>
-                                    <a href="#" title="" class="themee-btn">send message</a>
+                                <div class="small d-flex justify-content-start">
+                                    <a href="#!" class="d-flex align-items-center me-3">
+                                        <i class="far fa-thumbs-up me-2 text-white"></i>
+                                        <p class="mb-0 text-white">Like</p>
+                                    </a>
+                                    <a href="#!" class="d-flex align-items-center me-3">
+                                        <i class="far fa-comment-dots me-2 text-white"></i>
+                                        <p class="mb-0 text-white">Comment</p>
+                                    </a>
+                                    <a href="#!" class="d-flex align-items-center me-3">
+                                        <i class="fas fa-share me-2 text-white"></i>
+                                        <p class="mb-0 text-white">Share</p>
+                                    </a>
                                 </div>
 
-                                <ul class="verification d1-none">
-                                    <li><i class="flaticon-world"></i>Online on 4 Oct, 2017 at 08:36</li>
-                                    <li><i class="flaticon-tick"></i>Account connected on Facebook</li>
-                                    <li><i class="flaticon-tick"></i>Phone number verified</li>
-                                </ul>
                             </div>
-                            <div class="col-lg-9 col-sm-8">
-                                <div class="note-box">
-                                    <span><i class="fa fa-calendar-check-o"></i>Update calendar</span>
-                                    <p>
-                                        Remember to mark the calendar when the car is NOT available to be rented. That
-                                        way you avoid renting the car to others when you need it.</p>
-                                </div>
-                                <div class="car-profile top-space50">
-                                    <select class="car-models">
-                                        <option>إضافة</option>
-                                        <option>BMW E8</option>
-                                        <option>Suzuki jeep</option>
-                                        <option>Toyota Hilux</option>
-                                        <option>Honda accord</option>
-                                    </select>
-                                    <div class="nice-select car-models">
-                                        <ul class="list">
-                                            <li data-value="BMW E8" class="option">BMW E8</li>
-                                            <li data-value="Suzuki jeep" class="option">Suzuki jeep</li>
-                                            <li data-value="Toyota Hilux" class="option">Toyota Hilux</li>
-                                            <li data-value="Honda accord" class="option">Honda accord</li>
-                                        </ul>
+
+                            <div class="card-footer py-3 border-0" style="background-color: #4f4ed7;">
+
+                                <div class="d-flex flex-start w-100">
+                                    <div class="rounded-circle shadow-1-strong me-3">
+                                        <i class="fa-solid fa-user-tie" style="color: yellow;"></i>
                                     </div>
-                                    <div class="car-list">
-                                        <figure class="qwer">
-                                            <img src="img/car-profile.jpg" alt="" id="qwer">
-                                        </figure>
-                                        <div class="car-info">
-                                            <ins class="delete-pro"><i
-                                                    class="fa-solid fa-trash fa-beat fa-xs"></i></ins>
-                                            <div id="asd">
-                                                <p class="h4">Citroen C4 Picasso 1.6 e-HDi Airdream </p>
-                                                <span class="span-Citroen">2012</span>
-                                            </div>
-                                            <h6 class="h6">Car East.com/0329110</h6>
-                                            <span class="span-citroen"><i class="fa fa-location-arrow"></i>01000 New
-                                                York</span>
-                                            <a href="#" class="a-link">complete the profile of your car</a>
-                                        </div>
+                                    <div class="form-outline w-100">
+                                        <textarea class="form-control" id="textAreaExample" rows="4"
+                                            style="background: #5c81ff; resize: none;"></textarea>
+                                        <label class="form-label" for="textAreaExample"
+                                            style="color: yellow;">Message</label>
                                     </div>
                                 </div>
+
+                                <div class="commentpost">
+                                    <button type="button" class="btn btn-primary btn-sm">Post comment</button>
+                                    <button type="button" class="btn btn-outline-primary btn-sm"
+                                        style="background-color: yellow; color: blue; font-weight: 700;">Cancel</button>
+                                </div>
+
                             </div>
+
                         </div>
                     </div>
-
                 </div>
-            </div>
-        </div>
-    </section><!-- points section -->
+    </section>
 
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer class=" footer-bootstrap-v5 ">
 
         <div class="row ms-0 me-0">
 
@@ -386,7 +263,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
@@ -475,17 +352,13 @@
         </div>
 
     </footer>
-
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
-    <!-- button go to top /-->
 
     <script src="js/java.js"></script>
-    <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
-
-
+    <script src="js/all.min.js"></script>
 
 </body>
 
