--- a/form-driver.html
+++ b/form-driver.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US"dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">    
+    <link rel="stylesheet" href="css/Arabic.css">
     <title>Form-Driver</title>
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
 
     <div class="container-fluid" id="container-fluid">
 
@@ -50,14 +51,12 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+            </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -69,7 +68,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -172,7 +171,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
@@ -325,7 +324,7 @@
                     <div class="d-flex align-items-center responsiveDatPriveat">
                         <label class="phone" for="phone">Enter a personal number:</label>
                         <input type="tel" class="form-control" id="inputGroupFile02" name="personal"
-                            placeholder="123-456789-101112" pattern="[0-9]{3}-[0-9]{5}-[0-9]{3}" required>
+                            placeholder="15 NUMBERS" pattern="[0-9]{14}" required>
                     </div>
                 </li>
 
@@ -380,7 +379,7 @@
                     <div class="d-flex align-items-center responsiveDatPriveat">
                         <label class="phone" for="phone">Enter a personal number:</label>
                         <input type="tel" class="form-control" id="inputGroupFile02" name="personal"
-                            placeholder="123-456789-101112" pattern="[0-9]{3}-[0-9]{5}-[0-9]{3}" required>
+                        placeholder="15 NUMBERS" pattern="[0-9]{14}" required>
                     </div>
                 </li>
 
@@ -445,7 +444,7 @@
                     <div class="d-flex align-items-center responsiveDatPriveat">
                         <label class="phone" for="phone">Enter a personal number:</label>
                         <input type="tel" class="form-control" id="inputGroupFile02" name="personal"
-                            placeholder="123-456789-101112" pattern="[0-9]{3}-[0-9]{5}-[0-9]{3}" required>
+                            placeholder="15 NUMBERS" pattern="[0-9]{14}" required>
                     </div>
                 </li>
 
