--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="js/jquery.js"></script>
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
 
     <div class="container-fluid" id="container-fluid">
 
@@ -56,14 +56,12 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+            </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -219,9 +217,8 @@
 
                     </div>
 
-                    <div style="top: 60%;" class="eltripLogo carousel-caption">
-                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div  class="eltripLogo carousel-caption">
+                        <h1 class="h1yellowpriveat yellow">El-Trip</h1>
                     </div>
 
                 </div>
@@ -249,10 +246,8 @@
 
                     </div>
 
-                    <div style="width: 20%; height: 60px;
-                    top: 17%; left: 50%; background-color: rgb(0 0 0 / 13%);" class="eltripLogo carousel-caption">
-                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div class="eltripLogo carousel-caption captionresponsive1">
+                        <h1 class="h1yellowpriveat yellow-el">El-Trip</h1>
                     </div>
 
                 </div>
@@ -279,9 +274,8 @@
 
                     </div>
 
-                    <div style="top: 60%; width: 20%; height: 60px;" class="eltripLogo carousel-caption">
-                        <h1 style="color: #919090; background-color: rgb(0 0 0 / 60%); font-size: 50px; font-weight: bolder; 
-                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
+                    <div class="eltripLogo carousel-caption captionresponsive2">
+                        <h1  class="h1yellowpriveat yellow">El-Trip</h1>
                     </div>
 
                 </div>
