--- a/Services.html
+++ b/Services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/Arabic.css">
     <title>Services</title>
     <style>
         section,
@@ -1066,7 +1067,7 @@
     </style>
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
 
     <div class="container-fluid" id="container-fluid">
 
@@ -1101,14 +1102,12 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+            </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -1120,7 +1119,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -1223,7 +1222,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
