--- a/car-profile.html
+++ b/car-profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/Arabic.css">
     <title>Car-Profile</title>
 
     <style>
