--- a/index after login.html
+++ b/index after login.html
@@ -1,6 +1,6 @@
 <!-- Sunday, September 3, 2023-2:47:08 PM -->
 <!DOCTYPE html>
-<html lang="en-US"  dir="rtl">
+<html lang="en-US" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <title>Index-After-Login</title>
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
 
     <div class="container-fluid" id="container-fluid">
 
@@ -54,9 +54,9 @@
                 </li>
             </div>
 
-            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit">+post</button>
-            </form>
+            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+            </li>
 
             <li class="nav-item dropdown width-driver">
 
@@ -92,9 +92,7 @@
             </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -209,7 +207,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
@@ -223,7 +221,7 @@
 
     <section class="section-image-top-position mt-3">
 
-        <div id="carouselExampleControlsNoTouching"  class="carousel slide" data-bs-touch="false"
+        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
             data-bs-interval="false">
             <div class="carousel-inner">
 
@@ -476,7 +474,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person one</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -505,7 +504,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person two</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -530,7 +530,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person three</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -563,7 +564,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person four</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -596,7 +598,8 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person five</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
+                                on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
