--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </nav>
 
     <section class="section-image-top-position mt-3">
-<!--carousel slider  -->
+
         <div id="carouselExampleControlsNoTouching" class="carousel slide-fade" data-bs-touch="false"
         data-bs-interval="false">
             <div class="carousel-inner">
@@ -1034,7 +1034,7 @@
             <div class="carousel-item active text-center" data-bs-interval="10000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeOne">Coding is </h1>
+                    <h1 id="typeOne">El-Trip: </h1>
                     <img src="img/brand-1.jpeg" id="buttonOne" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1042,7 +1042,7 @@
             <div class="carousel-item text-center " data-bs-interval="2000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeTow">Coding is </h1>
+                    <h1 id="typeTow">El-Trip: </h1>
                     <img src="img/brand-2.png" id="buttonTow" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1050,7 +1050,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeThree">Coding is </h1>
+                    <h1 id="typeThree">El-Trip: </h1>
                     <img src="img/brand-3.jpeg" id="buttonThree" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1058,7 +1058,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFour">Coding is </h1>
+                    <h1 id="typeFour">El-Trip: </h1>
                     <img src="img/brand-5.jpeg" id="buttonFour" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1066,7 +1066,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFive">Coding is </h1>
+                    <h1 id="typeFive">El-Trip: </h1>
                     <img src="img/brand-6.jpeg" id="buttonFive" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1074,7 +1074,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeSex">Coding is </h1>
+                    <h1 id="typeSex">El-Trip: </h1>
                     <img src="img/brand-7.jpeg" id="buttonSex" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1082,7 +1082,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeEight">Coding is </h1>
+                    <h1 id="typeEight">El-Trip: </h1>
                     <img src="img/brand-8.jpeg" id="buttonEight" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
