--- a/Blog.html
+++ b/Blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -18,6 +18,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/Arabic.css">
     <title>Blog</title>
     <style>
         .material-symbols-outlined {
@@ -91,7 +92,8 @@
     </style>
 </head>
 
-<body>
+<body style="background-color: #5c81ff;">
+
     <div class="container-fluid" id="container-fluid">
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
@@ -126,15 +128,11 @@
             </div>
 
             <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-                <button class="btn  button-post" type="submit"> 
-                    <a href="your-comment.html">+post</a>
-                </button>
+                <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
             </li>
 
             <li class="nav-item dropdown width-Click">
-                <button onclick="myFunction()">
-                    Click here
-                </button>
+                <button onclick="myFunction()">Click here</button>
             </li>
 
         </ul>
@@ -146,7 +144,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -249,7 +247,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
